--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,11 @@
 				<scope>compile</scope>
 			</dependency>
 			-->
-			
-			
+			<dependency>
+				<groupId>com.lowagie</groupId>
+				<artifactId>itext</artifactId>
+				<version>4.2.1</version>
+			</dependency>
 
 			<!-- Begin OpenMRS core -->
 			
